--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.ticketflow</groupId>
-	<artifactId>reservationmanager</artifactId>
+	<artifactId>salesmanager</artifactId>
 	<version>1.0</version>
-	<name>reservationmanager</name>
-	<description>Reservation Manager</description>
+	<name>salesmanager</name>
+	<description>Sales Manager</description>
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2022.0.1</spring-cloud.version>
@@ -27,11 +27,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.liquibase</groupId>
-			<artifactId>liquibase-core</artifactId>
 		</dependency>
 
 		<dependency>
@@ -72,6 +67,17 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-bootstrap</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.4.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-mysql</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -109,7 +115,7 @@
 							<jvmFlag>-Xms128m</jvmFlag>
 							<jvmFlag>-Xmx256m</jvmFlag>
 						</jvmFlags>
-						<mainClass>com.ticketflow.reservationmanager.ReservationManagerApplication</mainClass>
+						<mainClass>com.ticketflow.salesmanager.SalesManagerApplication</mainClass>
 					</container>
 				</configuration>
 			</plugin>
