--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,3 +1,3 @@
-spring.application.name=salesmanager
+spring.application.name=sales-manager
 spring.cloud.config.uri=${CONFIG_SERVER_URL:http://localhost:8888}
 spring.cloud.config.fail-fast=true
